syntax = "proto3";

option java_package = "az.etibarli.grpc";
option java_multiple_files = true;

message PersonRequest {
  int32 id = 1;
  string name = 2;
}

message PersonResponse {
  int32 count = 1;
}

service PersonService {
  // client-side streaming
  rpc savePeople(stream PersonRequest) returns(PersonResponse);
}